--- a/loginMentee.html
+++ b/loginMentee.html
@@ -33,10 +33,10 @@
                     <div class="form-items">
                         <h3 style="color:rgb(30, 162, 150);" >Se connecter en tant que mentee</h3>
                         <form>
-                            <input style="border:1px solid rgb(30, 162, 150);" class="form-control" type="text" name="username" placeholder="Addresse email" required>
-                            <input style="border:1px solid rgb(30, 162, 150);" class="form-control" type="password" name="password" placeholder="Password" required>
+                            <input style="border:1px solid rgb(30, 162, 150);" class="form-control" type="text" name="username" placeholder="Addresse email" >
+                            <input style="border:1px solid rgb(30, 162, 150);" class="form-control" type="password" name="password" placeholder="Password" >
                             <div class="form-button">
-                                <button  id="submit" type="submit" class="ibtn">Se connecter</button>
+                                <button  id="submit" type="submit" class="ibtn"><a href="categoryMentor.html">Se connecter</a></button>
                             </div>
                         </form> <br>
                             <div class="page-links">
