--- a/about.html
+++ b/about.html
@@ -27,66 +27,61 @@
 
 <body>
   <main id="main">
-    <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs" data-aos="fade-in">
-      <div class="container">
+      <div class="container" mt-0>
         <h2>A propos</h2> <br>
-        <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
+        <p style="text-align: left;">Bienvenue sur notre plateforme! Nous somme ravis de vous offrir  l'opportunité de développer vos compétences et de progresser dans votre carrière grace à l'aide d'un <br> mentor qualifié. </p>
       </div>
-    </div><!-- End Breadcrumbs -->
-
-    <!-- ======= About Section ======= -->
+    </div>
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Webinar-amico.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Nous sommes passionnés par l'opportunité de créer des connexions significatives et de favoriver la croissance professionnelle et personnelle pour tous ceux qui participent à notre programme.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+            
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circle">Se connecter</i></li>
+              <li><i class="bi bi-check-circle">S'inspirer</i></li>
+              <li><i class="bi bi-check-circle">Progresser</i> </li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+            Notre platefome est fondéé sur l'idée que chacun a le potentiel de réaliser ses objectifs professionnels et de carrière et que les mentors peuvent jouer un role cle pour aider à atteindre ces objectifs.
             </p>
 
           </div>
         </div>
 
       </div>
-    </section><!-- End About Section -->
+    </section>
 
-    <!-- ======= Counts Section ======= -->
     <section id="counts" class="counts section-bg">
       <div class="container">
 
         <div class="row counters">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="1232" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="1801" data-purecounter-duration="1" class="purecounter"></span>
             <p>Mentees</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="64" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="120" data-purecounter-duration="1" class="purecounter"></span>
             <p>Domaine d'interventions</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="1879" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="1779" data-purecounter-duration="1" class="purecounter"></span>
             <p>Rendez vous</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="78" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="1912" data-purecounter-duration="1" class="purecounter"></span>
             <p>Mentors</p>
           </div>
 
@@ -100,7 +95,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Temoignages</h2>
+          <h2 style="color: rgb(30, 162, 150)">Temoignages</h2>
           <p>Ce qu'ils disent </p>
         </div>
 
@@ -110,42 +105,27 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                  <h3>Saul Assogba</h3>
-                  <h4>Etudiant</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Devan</h3>
-                  <h4>Designer</h4>
+                  <h3>Sarah Assogba</h3>
+                  <h4>Etudiante en marketing</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Grâce à cette plateforme,j'ai trouvé un mentor qui m'a guidé dans mes choix professionnels.Ses conseils avisés m'ont permis d'optimiser mes compétences et d'obtenir le post de mes rêves.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                  <h3>Jenn Karls</h3>
-                  <h4>Store Owner</h4>
+                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                  <h3>Julien</h3>
+                  <h4>Fondateur d'une startup</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                    Jeune entrepreneur et j'ai été confronté à de nombreux défis.Heureusement,j'ai trouvé un mentor sur cette plateforme qui m'a aidé à surmonter mes difficultés et à développer mo, entreprise.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
@@ -156,11 +136,26 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                  <h3>Maths bredon</h3>
-                  <h4>Freelancer</h4>
+                  <h3>Nicolas</h3>
+                  <h4>Consultant en stratégie</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  Je suis ravi d'avoir découvert cette plateforme de mentorat.J'ai pu rencontrer des professionnels de mon domaine qui m'ont partager leur expérience et m'ont aidé à évoluer dans ma carrière.
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="testimonial-wrap">
+                <div class="testimonial-item">
+                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <h3>Thomas</h3>
+                  <h4>Etudiant en informatique</h4>
+                  <p>
+                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Je cherchais depuis longtemps un mentor pour m' ider à me lancer dans le monde de la tech.Grâce à cette plateform,j'ai trouvé le mentopr parfait qui m'a aidé à développer mes comp"tences en programmation.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
@@ -170,12 +165,12 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                  <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
+                  <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                  <h3>Lucie</h3>
+                  <h4>Jeune diplômée en communication</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  Je suis une jeune diplômée et j'avais besoin de conseils pour trouver mon premeir emploi.J'ai trouvé un mentor sur cette platefome qui m'a aidé préparer mes entretiens et à rédiger mon cv.J'ai finalement obtenu le job de mes rêves!.  
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
@@ -197,7 +192,7 @@
       <div class="me-md-auto text-center text-md-start">
         <div class="credits">
           <li style="list-style: none;">
-            <a href=".html">Politique et Confidentialité</a>
+            <a href="poliandconfi.html">Politique et Confidentialité</a>
           </li>
         </div>
         <div class="copyright">
