--- a/categoryMentor.html
+++ b/categoryMentor.html
@@ -27,7 +27,7 @@
                             <span><i class = "fas fa-border-all" style="color: white;"></i></span>
                         </div>
                         <div class = "category-title" id = "culture">
-                            <li>Culture</li>
+                            <li>Arts</li>
                             <span><i class = "fas fa-theater-masks" style="color: white;" ></i></span>
                         </div>
                         <div class = "category-title" id = "politics">
@@ -65,8 +65,8 @@
                                         <i class = "fas fa-comment"></i>34
                                     </span>
                                 </div>
-                                <h2>Lorem ipsum dolor sit amet</h2>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
+                                <h2>Entrepreneur</h2>
+                                <p>Salut!, moi c'est Mike, je suis un mentor entrepreneur en ligne dédié à aider les autres àatteindre leur potentiel.J'offre des conseils pratiques et des stratégies éprouvées pour aider mes mentees à réussir dans leur entreprise en ligne. </p>
                             <button type = "button" class = "read-btn" style="margin-top: 40px;"><i class = "fas fa-lock" style="color: black;font-weight: bold;"></i> &nbsp;Prendre un rendez vous</button>
                                 <i class = "fas fa-star" style="color:rgb(255,215,0);"></i>
                             <i class = "fas fa-star"style="color: rgb(255,215,0);"></i>
@@ -89,8 +89,8 @@
                                         <i class = "fas fa-comment"></i>34
                                     </span>
                                 </div>
-                                <h2>Lorem ipsum dolor sit amet</h2>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
+                                <h2>Webdesigner</h2>
+                                <p>Cc, moi c'est Mélaine je suis un mentor webdesigner en ligne passionné par la création de site web esthétiques et fonctionnels.j'aide mes mentees à apprendre les bases du design web et à développer leurs compétencespour créer des sites web professionnels qui attirent et retiennent les visiteurs </p>
                                 <button type = "button" class = "read-btn" style="margin-top: 40px;"><i class = "fas fa-lock" style="color: black;font-weight: bold;"></i> &nbsp;Prendre un rendez vous</button>
                             <i class = "fas fa-star" style="color:rgb(255,215,0);"></i>
                             <i class = "fas fa-star"style="color: rgb(255,215,0);"></i>
@@ -113,8 +113,8 @@
                                         <i class = "fas fa-comment"></i>34
                                     </span>
                                 </div>
-                                <h2>Lorem ipsum dolor sit amet</h2>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
+                                <h2>Rédaction web</h2>
+                                <p>Salut je suis mentor rédateur web en ligne passionné par l'art d'écrire pour le web.J'offre des conseil pratiques pour aider mes clients à améliorer leur rédaction web,à créer des contenus pertinents et à améliorer leur visibilité en ligne.</p>
                                 <button type = "button" class = "read-btn" style="margin-top: 40px;"><i class = "fas fa-lock" style="color: black;font-weight: bold;"></i> &nbsp;Prendre un rendez vous</button>
                                 <i class = "fas fa-star" style="color:rgb(255,215,0);"></i>
                                 <i class = "fas fa-star"style="color: rgb(255,215,0);"></i>
@@ -127,7 +127,7 @@
                         <div class = "all culture">
                             <div class = "post-img">
                                 <img src = "assets/imagesCategoryMentor/culture-1.jpg" alt = "post">
-                                <span class = "category-name">culture</span>
+                                <span class = "category-name">Art</span>
                             </div>
 
                             <div class = "post-content">
@@ -137,8 +137,8 @@
                                         <i class = "fas fa-comment"></i>34
                                     </span>
                                 </div>
-                                <h2>Lorem ipsum dolor sit amet</h2>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
+                                <h2>Artiste portraitiste</h2>
+                                <p>Je suis Marc ,un artiste pasionné par la création de portraits,qui croit que chaque individu est unique et mérite d'être représenté de mnière artistique.Avec des années d'expérience dans le domaine de l'art,je suis heureux de partager mes connaissances et mes compétenses avec ceux qui souhaitent apprendre à créer des portraits exceptionnels.Que vous soyez débutant ou que vous souhaitez améliorer vos compétences existantes,je suis là pour voud aider  atteindre votre objectifs artistiques.</p>
                                 <button type = "button" class = "read-btn" style="margin-top: 40px;"><i class = "fas fa-lock" style="color: black;font-weight: bold;"></i> &nbsp;Prendre un rendez vous</button>
                                 <i class = "fas fa-star" style="color:rgb(255,215,0);"></i>
                                 <i class = "fas fa-star"style="color: rgb(255,215,0);"></i>
@@ -151,7 +151,7 @@
                         <div class = "all culture">
                             <div class = "post-img">
                                 <img src = "assets/imagesCategoryMentor/culture-2.jpg" alt = "post">
-                                <span class = "category-name">culture</span>
+                                <span class = "category-name">Art</span>
                             </div>
 
                             <div class = "post-content">
@@ -161,8 +161,8 @@
                                         <i class = "fas fa-comment"></i>34
                                     </span>
                                 </div>
-                                <h2>Lorem ipsum dolor sit amet</h2>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
+                                <h2>Décoration intérieure</h2>
+                                <p>Salut,moi c'est Mirabelle,en tant que mentor j'aide mes clients à transformer leur maison en un espace qui réflète leur personnalité et leur style de vie.Avec des années d'expérience dans le domaine de la décoration intérieure,je suis pasionné par la création d'espaces qui sont à la fois esthétiqes et fonctionnnels.En travaillant avec moi,vous apprendrez à utiliser les couleurs,les textures et les motifs pour créer une atmosphère chaleureux.</p>
                                 <button type = "button" class = "read-btn" style="margin-top: 40px;"><i class = "fas fa-lock" style="color: black;font-weight: bold;"></i> &nbsp;Prendre un rendez vous</button>
                                 <i class = "fas fa-star" style="color:rgb(255,215,0);"></i>
                                 <i class = "fas fa-star"style="color: rgb(255,215,0);"></i>
@@ -175,7 +175,7 @@
                         <div class = "all culture">
                             <div class = "post-img">
                                 <img src = "assets/imagesCategoryMentor/culture-3.jpg" alt = "post">
-                                <span class = "category-name">culture</span>
+                                <span class = "category-name">Art</span>
                             </div>
 
                             <div class = "post-content">
@@ -185,8 +185,8 @@
                                         <i class = "fas fa-comment"></i>34
                                     </span>
                                 </div>
-                                <h2>Lorem ipsum dolor sit amet</h2>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
+                                <h2></h2>
+                                <p></p>
                                 <button type = "button" class = "read-btn" style="margin-top: 40px;"><i class = "fas fa-lock" style="color: black;font-weight: bold;"></i> &nbsp;Prendre un rendez vous</button>
                                 <i class = "fas fa-star" style="color:rgb(255,215,0);"></i>
                                 <i class = "fas fa-star"style="color: rgb(255,215,0);"></i>
@@ -199,7 +199,7 @@
                         <div class = "all culture">
                             <div class = "post-img">
                                 <img src = "assets/imagesCategoryMentor/culture-4.jpg" alt = "post">
-                                <span class = "category-name">culture</span>
+                                <span class = "category-name">Art</span>
                             </div>
 
                             <div class = "post-content">
@@ -233,8 +233,8 @@
                                         <i class = "fas fa-comment"></i>34
                                     </span>
                                 </div>
-                                <h2>Lorem ipsum dolor sit amet</h2>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
+                                <h2>Comptabilité</h2>
+                                <p>Bienvenus dans mon profil ! je suis un mentor expérimenté en comptabilité,passionné par l'aide aux étudiants et professionnels à développerleurs compétences en comptabilité.Je possède une vaste expérience dans le domaine de la comptabilité et j'ai travailé avaec des entreprise de différentes tailles et de différente secteurs. J'ai également une solide formation académique en comptabilitéce qui me permet de fournir des conseils pratiques et des solutions adaptés aux besoins des mes mentees.Vous êtes prêt à améliorer vos compétences en compétences et à atteindre vos objectifs professionnels,n'hésitez pas me le faire savoire en prenant un rendez-vous.</p>
                                 <button type = "button" class = "read-btn" style="margin-top: 40px;"><i class = "fas fa-lock" style="color: black;font-weight: bold;"></i> &nbsp;Prendre un rendez vous</button>
                                 <i class = "fas fa-star" style="color:rgb(255,215,0);"></i>
                                 <i class = "fas fa-star"style="color: rgb(255,215,0);"></i>
@@ -399,8 +399,8 @@
                                         <i class = "fas fa-comment"></i>34
                                     </span>
                                 </div>
-                                <h2>Lorem ipsum dolor sit amet</h2>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
+                                <h2>Entrainement sportif et nutriments</h2>
+                                <p>Je suis un mentor dans le domaine du sport et je suis là pour vous aider à atteindre vos objectifs.Avec des années d'expériences dans l'entrainement sportif et la nutrition,je suis passionné par la santé et le bien être.Mon objectif principal en tant que mentor est de vous aider à atteindre votre plein potentiel.Je suis là pour vous encourager,vous motiver et vous soutenir tout au long de votre parcours.Nous traivaillerons ensemble pour élaborer un plan d'entrainement et de nutrion personnalisé qui convient à votre style de vie et vos besoins.</p>
                                 <button type = "button" class = "read-btn" style="margin-top: 40px;"><i class = "fas fa-lock" style="color: black;font-weight: bold;"></i> &nbsp;Prendre un rendez vous</button>
                                 <i class = "fas fa-star" style="color:rgb(255,215,0);"></i>
                                 <i class = "fas fa-star" style="color:rgb(255,215,0);"></i>
@@ -425,7 +425,7 @@
                                         <i class = "fas fa-comment"></i>34
                                     </span>
                                 </div>
-                                <h2>Lorem ipsum dolor sit amet</h2>
+                                <h2></h2>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                                 <button type = "button" class = "read-btn" style="margin-top: 40px;"><i class = "fas fa-lock" style="color: black;font-weight: bold;"></i> &nbsp;Prendre un rendez vous</button>
                                 <i class = "fas fa-star" style="color:rgb(255,215,0);"></i>
